--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="https://www.iloveimg.com/download/nqhq8hAbw8scshr14ypdcpbgfrb11w6mlbs31fsqAA6vlzp376711k4wvj7h6r38p7vpqx4sgkwcAx5ng87zwy1cdx6Ayrjnq6bgA3n2wqqk5htzzyAz824mwwhj3k4zxmgAnfpvj1A52275dcq6tpd9rrn2hqz19r8f4jk2p7rzA2bsfsf1/4">
+  <meta name="description" content="social media">
+  <meta name="author" content="862277458">
 
-  <title>John Doe - Business Administration</title>
+  <title>Ariana Miranda-Social Networking</title>
+
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +28,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Ariana Miranda</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/arianamiranda.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +59,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Ariana Miranda
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Social Networking📚</div>
+        <p class="lead mb-4">Majoring in Sociology<br><br>
 
-        Enter bio here<br><br>
+        I am a first year at Ucr and I am currently commuting from Corona CA. My recent job is retail at Kohls. <br><br>
 
-        Enter bio here
+        My website is based on social networking with social media websites like Instagram, Facebook, etc.. Social networking is based on the interaction with other users or finding people who have similar interests as you. It also includes building social relationships with others that have similar personal, careers as oneself. There are many advantages/disadvantages of social networking which includes easy and instant communication between individuals as well as connecting with people from all around the world to disadvantages like cyber bullying, information overload and many more. Another thing I would say that social networking is beneficial is that you can use it to spread awareness about something.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/ariana-miranda-9b5986226/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/amira071">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/ariii_mirandaa">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://www.instagram.com/arii__mirandaa/">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +93,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Retail</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Kohls</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Customer service experience<br>
+              • Experience with learning about business/industry<br>
+              • Experience with financing<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">May 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Cashier/Supervisor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">La Michoacana Ice Cream Shop</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for making ice cream/maintaining clean area<br>
+              • Responsible for making sure customers are satisfied<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">November 2020 - April 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteering at Church</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">St. Edwards Catholic Church</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Responsible for selling drinks during festival<br>
+            • Learning how to deal with money<br>
+            • Responsible for keeping track of money<br>
+
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2019</span>
           </div>
         </div>
 
@@ -151,34 +152,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California Riverside</h3>
+            <div class="subheading mb-3">Majoring in Sociology</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2021-June 2025-</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary"</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary"></span>
           </div>
         </div>
 
@@ -191,7 +192,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpg" width="500px">
+            <img src="img/image2.jpg" width="500px"><br>
+            <img src="img/image3.jpg" width="500px">
+            <img src="img/image4.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +203,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Ariana Miranda</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
